# photogeniusai

./: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .web-url  ADMIN_COMPLETE.md  ADMIN_SETUP.md  AFTER_CLEANUP_STATUS.md  AGENT_STATUS.md  AGENT_TOKEN_USAGE.md  AI_BACKEND_COMPLETE.md  ALL_SERVICES_DEPLOYED.md  ALL_SERVICES_INTEGRATION.md  AWS_DEPLOY.md  AWS_DEPLOYMENT_GUIDE.md  BEAST_AGENT_WIRING_COMPLETE.md  BEAST_CONFIG_COMPLETE.md  BEAST_CONFIG_COMPLETE_SUMMARY.md  BEAST_CONFIG_INTEGRATION_GUIDE.md  BEAST_CONFIG_WIRING_STATUS.md  BEAST_IMPLEMENTATION_COMPLETE.md  BEAST_MODE_100_PERCENT_COMPLETE.md  BEAST_MODE_FINAL_IMPLEMENTATION.md  BEAST_MODE_FINAL_STATUS.md  BEAST_MODE_IMPLEMENTATION_COMPLETE.md  BEAST_PROMPT_ENGINEER_COMPLETE.md  BEAST_PROMPT_ENGINEER_GAP.md  BEAST_TRIAGE_COMPLETE.md  BRAND_INTELLIGENCE_AGENT_COMPLETE.md  BROWSER_ERRORS_EXPLAINED.md  BUGS-AND-FIXES.md  BUGS_FIXED.md  CLAUDE.md  CLAUDE_HAIKU_MIGRATION.md  CLEANUP_DUPLICATES.md  CLEANUP_SUMMARY.md  CLERK_WEBHOOK_SETUP.md  COMMANDS.md  COMPOSITION_INTELLIGENCE_V3.md  CRITICAL_DEPLOYMENT_GAPS.md  (+87 more)
apps/ai-service/: Dockerfile  REDOC_TROUBLESHOOTING.md  modal_app.py  package.json  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
apps/api/: .pip-hash-requirements_minimal_txt  AUDIT_LOGGER_IMPLEMENTATION.md  DEV_SETUP.md  FIXES.md  README.md  TESTING_GUIDE.md  TODO_IMPLEMENTATION.md  __init__.py  apprunner.yaml  fix_migration.py  fix_table_structure.sql  package.json  pyproject.toml  pytest.ini  quick_fix_migration.ps1  recreate-venv.ps1  requirements-aws.txt  (+10 more)
(+1076 files in other folders)
